# sensor-fusion

./: .gitignore  README.md
course/cpp/01_foundations/answers/ex05_hard_cmake_answer/: CMakeLists.txt
course/cpp/01_foundations/exercises/: CMakeLists.txt  ex01_hard.cpp  ex01_pipeline.cpp  ex02_hard.cpp  ex02_types_const.cpp  ex03_hard.cpp  ex03_pointers_refs.cpp  ex04_hard.cpp  ex04_namespaces.cpp  hypotenuse.cpp
course/cpp/01_foundations/exercises/ex05_cmake_project/include/: vector2d.hpp
course/cpp/01_foundations/exercises/ex05_cmake_project/src/: main.cpp  vector2d.cpp
course/cpp/01_foundations/exercises/ex05_hard_cmake_project/: CMakeLists.txt  TASKS.md
course/cpp/01_foundations/exercises/ex05_hard_cmake_project/app/src/: main.cpp
course/cpp/02_classes_oop_raii/exercises/: CMakeLists.txt  ex01_constructors.cpp  ex01_constructors_hard.cpp  ex02_copy_move.cpp  ex02_copy_move_hard.cpp  ex03_raii.cpp  ex03_raii_hard.cpp  ex04_operators.cpp  ex04_operators_hard.cpp  ex05_inheritance.cpp  ex05_inheritance_hard.cpp
course/cpp/02_classes_oop_raii/exercises/ex06_kalman1d/include/: kalman1d.hpp
course/cpp/02_classes_oop_raii/exercises/ex06_kalman1d/src/: kalman1d.cpp  main.cpp
course/cpp/03_templates_generic_programming/answers/: CMakeLists.txt  ex01_function_templates_answer.cpp  ex01_hard_answer.cpp  ex02_hard_answer.cpp  ex02_static_vector_answer.cpp  ex03_hard_answer.cpp  ex03_traits_concepts_answer.cpp  ex04_crtp_units_answer.cpp  ex04_hard_answer.cpp  ex05_capstone_typed_ring_buffer_answer.cpp  ex05_hard_answer.cpp
course/cpp/03_templates_generic_programming/exercises/: CMakeLists.txt  ex01_function_templates.cpp  ex01_hard.cpp  ex02_hard.cpp  ex02_static_vector.cpp  ex03_hard.cpp  ex03_traits_concepts.cpp  ex04_crtp_units.cpp  ex04_hard.cpp  ex05_capstone_typed_ring_buffer.cpp  ex05_hard.cpp
course/cpp/04_modern_cpp/answers/: CMakeLists.txt  ex01_auto_structured_bindings_answer.cpp  ex01_hard_answer.cpp  ex02_hard_answer.cpp  ex02_lambdas_algorithms_answer.cpp  ex03_hard_answer.cpp  ex03_optional_variant_answer.cpp  ex04_constexpr_folds_answer.cpp  ex04_hard_answer.cpp  ex05_capstone_config_state_machine_answer.cpp  ex05_hard_answer.cpp
course/cpp/04_modern_cpp/exercises/: CMakeLists.txt  ex01_auto_structured_bindings.cpp  ex01_hard.cpp  ex02_hard.cpp  ex02_lambdas_algorithms.cpp  ex03_hard.cpp  ex03_optional_variant.cpp  ex04_constexpr_folds.cpp  ex04_hard.cpp  ex05_capstone_config_state_machine.cpp  ex05_hard.cpp
course/cpp/05_standard_library/answers/: CMakeLists.txt  ex01_containers_answer.cpp  ex01_hard_answer.cpp  ex02_algorithms_answer.cpp  ex02_hard_answer.cpp  ex03_chrono_answer.cpp  ex03_hard_answer.cpp  ex04_hard_answer.cpp  ex04_string_view_answer.cpp  ex05_capstone_sensor_window_answer.cpp  ex05_hard_answer.cpp
course/cpp/05_standard_library/exercises/: CMakeLists.txt  ex01_containers.cpp  ex01_hard.cpp  ex02_algorithms.cpp  ex02_hard.cpp  ex03_chrono.cpp  ex03_hard.cpp  ex04_hard.cpp  ex04_string_view.cpp  ex05_capstone_sensor_window.cpp  ex05_hard.cpp
course/cpp/06_concurrency/answers/: CMakeLists.txt  ex01_hard_answer.cpp  ex01_threads_answer.cpp  ex02_hard_answer.cpp  ex02_mutex_answer.cpp  ex03_condition_variable_answer.cpp  ex03_hard_answer.cpp  ex04_atomic_future_answer.cpp  ex04_hard_answer.cpp  ex05_capstone_blocking_queue_answer.cpp  ex05_hard_answer.cpp
course/cpp/06_concurrency/exercises/: CMakeLists.txt  ex01_hard.cpp  ex01_threads.cpp  ex02_hard.cpp  ex02_mutex.cpp  ex03_condition_variable.cpp  ex03_hard.cpp  ex04_atomic_future.cpp  ex04_hard.cpp  ex05_capstone_blocking_queue.cpp  ex05_hard.cpp
course/cpp/07_performance_tooling/answers/: CMakeLists.txt  ex01_benchmark_timer_answer.cpp  ex01_hard_answer.cpp  ex02_allocation_answer.cpp  ex02_hard_answer.cpp  ex03_cache_layout_answer.cpp  ex03_hard_answer.cpp  ex04_hard_answer.cpp  ex04_sanitizer_bughunt_answer.cpp  ex05_capstone_pointcloud_transform_answer.cpp  ex05_hard_answer.cpp
course/cpp/07_performance_tooling/exercises/: CMakeLists.txt  ex01_benchmark_timer.cpp  ex01_hard.cpp  ex02_allocation.cpp  ex02_hard.cpp  ex03_cache_layout.cpp  ex03_hard.cpp  ex04_hard.cpp  ex04_sanitizer_bughunt.cpp  ex05_capstone_pointcloud_transform.cpp  ex05_hard.cpp
course/cpp/08_robotics_patterns/answers/: CMakeLists.txt  ex01_hard_answer.cpp  ex01_observer_answer.cpp  ex02_hard_answer.cpp  ex02_plugin_factory_answer.cpp  ex03_fsm_answer.cpp  ex03_hard_answer.cpp  ex04_components_answer.cpp  ex04_hard_answer.cpp  ex05_capstone_localization_answer.cpp  ex05_hard_answer.cpp
course/cpp/08_robotics_patterns/exercises/: CMakeLists.txt  ex01_hard.cpp  ex01_observer.cpp  ex02_hard.cpp  ex02_plugin_factory.cpp  ex03_fsm.cpp  ex03_hard.cpp  ex04_components.cpp  ex04_hard.cpp  ex05_capstone_localization.cpp  ex05_hard.cpp
course/ros2/01_ros2_foundations/answers/robot_monitor_prototype/: CMakeLists.txt  package.xml
course/ros2/01_ros2_foundations/answers/robot_monitor_prototype/src/: robot_monitor_prototype.cpp
course/ros2/01_ros2_foundations/answers/robot_status_publisher/: CMakeLists.txt  package.xml
course/ros2/01_ros2_foundations/answers/robot_status_publisher/src/: robot_status_publisher.cpp
course/ros2/01_ros2_foundations/exercises/robot_monitor_prototype/: CMakeLists.txt  package.xml
course/ros2/01_ros2_foundations/exercises/robot_monitor_prototype/src/: robot_monitor_prototype.cpp
course/ros2/01_ros2_foundations/exercises/robot_status_publisher/: CMakeLists.txt  package.xml
course/ros2/02_package_architecture/answers/package_architecture_lab/: CMakeLists.txt  package.xml
course/ros2/02_package_architecture/exercises/package_architecture_lab/: CMakeLists.txt  package.xml
course/ros2/03_production_nodes/answers/production_nodes_lab/: CMakeLists.txt  package.xml
course/ros2/03_production_nodes/exercises/production_nodes_lab/: CMakeLists.txt  package.xml
course/ros2/04_communication_design/answers/communication_design_lab/: CMakeLists.txt  package.xml
course/ros2/04_communication_design/exercises/communication_design_lab/: CMakeLists.txt  package.xml
(+192 files in other folders)
