cmake_minimum_required(VERSION 3.16)
project(module06_concurrency_answers CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Threads REQUIRED)

add_executable(ex01_threads_answer ex01_threads_answer.cpp)
add_executable(ex02_mutex_answer ex02_mutex_answer.cpp)
add_executable(ex03_condition_variable_answer ex03_condition_variable_answer.cpp)
add_executable(ex04_atomic_future_answer ex04_atomic_future_answer.cpp)
add_executable(ex05_capstone_blocking_queue_answer ex05_capstone_blocking_queue_answer.cpp)
add_executable(ex01_hard_answer ex01_hard_answer.cpp)
add_executable(ex02_hard_answer ex02_hard_answer.cpp)
add_executable(ex03_hard_answer ex03_hard_answer.cpp)
add_executable(ex04_hard_answer ex04_hard_answer.cpp)
add_executable(ex05_hard_answer ex05_hard_answer.cpp)

target_link_libraries(ex01_threads_answer PRIVATE Threads::Threads)
target_link_libraries(ex02_mutex_answer PRIVATE Threads::Threads)
target_link_libraries(ex03_condition_variable_answer PRIVATE Threads::Threads)
target_link_libraries(ex04_atomic_future_answer PRIVATE Threads::Threads)
target_link_libraries(ex05_capstone_blocking_queue_answer PRIVATE Threads::Threads)
target_link_libraries(ex01_hard_answer PRIVATE Threads::Threads)
target_link_libraries(ex02_hard_answer PRIVATE Threads::Threads)
target_link_libraries(ex03_hard_answer PRIVATE Threads::Threads)
target_link_libraries(ex04_hard_answer PRIVATE Threads::Threads)
target_link_libraries(ex05_hard_answer PRIVATE Threads::Threads)
