cmake_minimum_required(VERSION 3.16)
project(module06_concurrency CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(ex01_threads ex01_threads.cpp)
add_executable(ex02_mutex ex02_mutex.cpp)
add_executable(ex03_condition_variable ex03_condition_variable.cpp)
add_executable(ex04_atomic_future ex04_atomic_future.cpp)
add_executable(ex05_capstone_blocking_queue ex05_capstone_blocking_queue.cpp)
add_executable(ex01_hard ex01_hard.cpp)
add_executable(ex02_hard ex02_hard.cpp)
add_executable(ex03_hard ex03_hard.cpp)
add_executable(ex04_hard ex04_hard.cpp)
add_executable(ex05_hard ex05_hard.cpp)

find_package(Threads REQUIRED)
target_link_libraries(ex01_threads PRIVATE Threads::Threads)
target_link_libraries(ex02_mutex PRIVATE Threads::Threads)
target_link_libraries(ex03_condition_variable PRIVATE Threads::Threads)
target_link_libraries(ex04_atomic_future PRIVATE Threads::Threads)
target_link_libraries(ex05_capstone_blocking_queue PRIVATE Threads::Threads)
target_link_libraries(ex01_hard PRIVATE Threads::Threads)
target_link_libraries(ex02_hard PRIVATE Threads::Threads)
target_link_libraries(ex03_hard PRIVATE Threads::Threads)
target_link_libraries(ex04_hard PRIVATE Threads::Threads)
target_link_libraries(ex05_hard PRIVATE Threads::Threads)
