<?xml version="1.0"?>
<package format="3">
  <name>robot_status_publisher_answer</name>
  <version>0.0.0</version>
  <description>Answer for ROS2 foundations status publisher exercise.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

