<?xml version="1.0"?>
<package format="3">
  <name>robot_monitor_prototype</name>
  <version>0.0.0</version>
  <description>Hard ROS2 foundations exercise: robot monitor prototype.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

