<?xml version="1.0"?>
<package format="3">
  <name>robot_status_publisher</name>
  <version>0.0.0</version>
  <description>Moderate ROS2 foundations exercise: parameterized robot status publisher.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

