<?xml version="1.0"?>
<package format="3">
  <name>package_architecture_lab</name>
  <version>0.0.0</version>
  <description>ROS2 package architecture exercises.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>

