<?xml version="1.0"?>
<package format="3">
  <name>production_nodes_lab_answer</name>
  <version>0.0.0</version>
  <description>Answers for ROS2 production node exercises.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>

